...
        android:layout_marginStart="16dp"
        android:text="@string/title_holder"
        app:layout_constraintStart_toEndOf="@+id/img_poster_movies"
        app:layout_constraintTop_toTopOf="@+id/img_poster_movies" />

    <TextView
        android:id="@+id/text_title_movies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title"
        android:textSize="24sp"
...
        app:layout_constraintBottom_toBottomOf="@+id/img_poster_movies"
        app:layout_constraintStart_toEndOf="@+id/img_poster_movies"
        app:layout_constraintTop_toTopOf="@+id/img_poster_movies"
        app:layout_constraintVertical_bias="0.809" />

    <TextView
        android:id="@+id/tv_genre_movies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/genre"
        android:textColor="@color/black"
...
