...
        android:layout_marginStart="16dp"
        android:text="@string/title_holder"
        app:layout_constraintStart_toEndOf="@+id/img_poster_tvshow"
        app:layout_constraintTop_toTopOf="@+id/img_poster_tvshow" />

    <TextView
        android:id="@+id/text_title_tvshow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title"
        android:textColor="@color/black"
...
        android:text="@string/creator"
        app:layout_constraintBottom_toBottomOf="@+id/img_poster_tvshow"
        app:layout_constraintStart_toEndOf="@+id/img_poster_tvshow"
        app:layout_constraintTop_toTopOf="@+id/img_poster_tvshow" />

    <TextView
        android:id="@+id/tv_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/director"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
...
